--- a/proyectos.html
+++ b/proyectos.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="./stylee/base.css">
+    <link rel="stylesheet" href="./sass/base.css">
     <title>Proyectos</title>
 </head>
 
@@ -124,57 +124,9 @@
         <div>
             <section>
                 <div>
-                    <h2>Desarrollo de Video Juego textrix en FPGA, con modulos de VGA y Puerto teclado PS2 y via
-                        Bluetooth</h2>
-                </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col s12">
-                            <div class="carousel center-aling">
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/Grafico.png" class="rounded mx-auto d-block"
-                                        alt="Pantalla 7 colores">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/diagrama_bloque_grafico.png"
-                                        class="rounded mx-auto d-block" alt="Bloque VHDL Grafico">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/grafico_blue.png" class="rounded mx-auto d-block"
-                                        alt="Porgrama grafico bloque azul">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/grafico_green.png" class="rounded mx-auto d-block"
-                                        alt="Porgrama grafico bloque verde">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/grafico_red.png" class="rounded mx-auto d-block"
-                                        alt="Porgrama grafico bloque red">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/bloque_texto.png" class="rounded mx-auto d-block"
-                                        alt="Bloque modulos de texto ">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/texto_green.png" class="rounded mx-auto d-block"
-                                        alt="Texto color verde">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/textp_blue.png" class="rounded mx-auto d-block"
-                                        alt="texto color blue">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/textp_red.png" class="rounded mx-auto d-block"
-                                        alt="Texto color Red">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="./Image/fpga/VGA/CHIDA.png" class="rounded mx-auto d-block"
-                                        alt="Imagen de equipo de desarrollo">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    <h2>Desarrollo de Video Juego textrix en FPGA, con modulos de VGA y Puerto teclado PS2 y via Bluetooth</h2>
+                </div>             
+               
                 <div>
                     <h3>Pdf con la investigacion</h3>
                     <embed src="./Image/fpga//VGA_REPORT_EXPO.pdf" type="application/pdf" width="100%" height="800px" />
