--- a/aboutme.html
+++ b/aboutme.html
@@ -8,29 +8,46 @@
     <title>Perfil Profecional</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="/stylee/base.css">
+    <link rel="stylesheet" href="/sass/base.css">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="./index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./proyectos.html">Proyectos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-              </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="./index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./proyectos.html">Proyectos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
             </ul>
-          </nav>
-             
+        </nav>
+
     </header>
+    <video src="./Video/tinta.mp4" loop muted autoplay></video>
+    <main id="about_me">
+        <section class="text_about">
+            <div><h1>¿Quiém soy?</h1></div>
+            <div><p>Hola me llamo David Ricardo Cruz Juárez y tengo 25 años, Ingenerio Mecatrónico</p></div>
+            <div><p>Me gradue en Julio de el año 2021, de la Universidad Tecnologica de la Mixteca, en Areá de Ingenería en Mecatrónica</p></div>
+            <div><p>Durante mi estancia en esta carrera rehalize varios proyectos, dependediendo el curso, anexo mi Certificado de estudios</p></div>                       
+        </section>
+        <section>
+            <div>
+                <embed
+                        src="./image/Constancias y Certificaciones/Certificado de Estudios.pdf"type="application/pdf" width="80%" height="600px" />
+            </div>
+        </section>
+
+        <section></section>
+    </main >
 
     <footer class="fote">
         <section>
@@ -74,11 +91,11 @@
                 <div item="9"></div>
             </section>
         </section>
-    </footer> 
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    
+
 </body>
 
 </html>
