--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/sass/base.css">
 </head>
 
-<body>
+<body id="about_me">
     <header>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <ul class="navbar-nav">
@@ -32,7 +32,9 @@
 
     </header>
     <video src="./Video/tinta.mp4" loop muted autoplay></video>
-    <main id="about_me">
+    <aside></aside>
+
+    <main>
         <section class="text_about">
             <div><h1>¿Quiém soy?</h1></div>
             <div><p>Hola me llamo David Ricardo Cruz Juárez y tengo 25 años, Ingenerio Mecatrónico</p></div>
@@ -40,14 +42,14 @@
             <div><p>Durante mi estancia en esta carrera rehalize varios proyectos, dependediendo el curso, anexo mi Certificado de estudios</p></div>                       
         </section>
         <section>
-            <div>
-                <embed
-                        src="./image/Constancias y Certificaciones/Certificado de Estudios.pdf"type="application/pdf" width="80%" height="600px" />
+            <div class="container">
+                <embed src="./image/Constancias y Certificaciones/Certificado de Estudios.pdf"type="application/pdf" width="100%" height="800px" />
             </div>
         </section>
 
         <section></section>
     </main >
+    <aside></aside>
 
     <footer class="fote">
         <section>
@@ -73,7 +75,7 @@
                 </div>
                 <div item="item_3">
                     <h4>Git Hub</h4>
-                    <a class="btn" href="https://github.com/DavidRCJ?tab=repositories"><img
+                    <a class="btn" href="https://github.com/DavidRCJ"><img
                             src="./Image/social_redes/github.png" class="rounded mx-auto d-block"
                             alt="Icon Git Hub"></a>
                 </div>
