--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 </div>
                 <div item="item_3">
                     <h4>Git Hub</h4>
-                    <a class="btn" href="https://github.com/DavidRCJ?tab=repositories"><img
+                    <a class="btn" href="https://github.com/DavidRCJ"><img
                             src="./Image/social_redes/github.png" class="rounded mx-auto d-block"
                             alt="Icon Git Hub"></a>
                 </div>
