Adicion de sass para html About me

--- a/aboutme.html
+++ b/aboutme.html
@@ -36,19 +36,185 @@
 
     <main>
         <section class="text_about">
-            <div><h1>¿Quiém soy?</h1></div>
-            <div><p>Hola me llamo David Ricardo Cruz Juárez y tengo 25 años, Ingenerio Mecatrónico</p></div>
-            <div><p>Me gradue en Julio de el año 2021, de la Universidad Tecnologica de la Mixteca, en Areá de Ingenería en Mecatrónica</p></div>
-            <div><p>Durante mi estancia en esta carrera rehalize varios proyectos, dependediendo el curso, anexo mi Certificado de estudios</p></div>                       
-        </section>
-        <section>
+            <div>
+                <h1>¿Quién soy?</h1>
+            </div>
+            <div>
+                <p>Hola me llamo David Ricardo Cruz Juárez, orgullosamente Oaxaqueño, tengo 25 años, Ingeniero
+                    Mecatrónico
+                </p>
+            </div>
+            <div>
+                <h2>Área Profesional</h2>
+                <p>
+                    Me gradué en Julio del año 2021, de la Universidad Tecnológica de la Mixteca, en Área de Ingeniería
+                    en Mecatrónica
+                </p>
+
+                <p>
+                    Durante mi estancia en esta carrera realice diferentes proyectos, que se encuentran en esta misma
+                    página
+                    , estos, tratan de juntar todos los cursos, desde creación de aplicaciones, control de sistemas
+                    embebidos y
+                    robóticos, e incluso, clustering y maching learning con fundamentos de inteligencia artificial.
+                    Anexo mi Certificado de estudios, sobre las áreas cursadas en esta institución
+
+                </p>
+            </div>
+
             <div class="container">
-                <embed src="./image/Constancias y Certificaciones/Certificado de Estudios.pdf"type="application/pdf" width="100%" height="800px" />
+                <embed src="./image/Constancias y Certificaciones/Certificado de Estudios.pdf" type="application/pdf"
+                    width="100%" height="800px" />
+            </div>
+
+        </section>
+
+        <section>
+            <div>
+                <h2>Estudios Posteriores</h2>
+            </div>
+
+            <div>
+                <h3>Entrenamiento Full Stack Developer</h3>
+                <div>
+                    <P>En octubre de 2022, se lanzó el Programa "Transformación Digital para Jóvenes", por parte del
+                        Gobierno de Puebla y
+                        la Secretaria de Economía del Estado de Puebla y junto a EMTECH INSTITUTE, con una postulación
+                        al programa de más de 1000
+                        personas, gracias a que me esfuerzo, soy perseverante y apasionado por la tecnología, logre
+                        aprobar y destacar en las 3 faces
+                        del programa.
+                    </p>
+                    <p>
+                        Actualmente me encuentro en la última fase con otras 74 personas de esas 1000.
+                        Este curso me brindo conocimiento y habilidades en: </p>
+                    <div class="bullet">
+                        <p class="fw-bold">Front-end y Back-end</p>
+                        <p class="fw-bold">Control de Versiones de Software Git & Git-Hub</p>
+                        <p class="fw-bold">Metodlogia Agile Marco Scrum</p>
+                        <p class="fw-bold">Introducción a las Tecnologias Emergentes</p>
+                    </div>
+                </div>
+                <div>
+                    <p>Obteniendo las siguientes constancias:</p>
+                </div>
+            </div>
+
+            <div class="contener_carrusel">
+                <div id="carouselExampleIndicators" class="carousel slide">
+
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./image/Constancias y Certificaciones/Tecnologias Emergentes_001.png"
+                                class="d-block w-100" alt="Tecnologias Emergentes">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/Constancias y Certificaciones/SCRUM_001.png" class="d-block w-100"
+                                alt="Scrum">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+            <div>
+                <h2>Diplomados con Fundación Slim</h2>
+                <p>Porque me fascina el mundo de la tecnología, me sigo preparando y actualizando en el mundo de la industria 4.0
+                    y en la actualidad, estoy cursando un diplomado con "Fundación Slim, Capacítate para el empleo" en IOT 
+                    (Internet de las Cosas), que envuelve diferentes cursos, estas son algunas de las certificaciones que he
+                    obtenido hasta el momento:
+                </p>
+            </div>
+
+            <div class="carusel2">
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="/image/Constancias y Certificaciones/Control de Versiones_001.png" class="d-block w-100" alt="CSV">
+                      </div> 
+                      <div class="carousel-item">
+                        <img src="/image/Constancias y Certificaciones/Fundamentos en Electronica Digital_001.png" class="d-block w-100" alt="F.E.D">
+                      </div>                       
+                      <div class="carousel-item">
+                        <img src="/image/Constancias y Certificaciones/Tecnico en Electronica_001.png" class="d-block w-100" alt="TecnicoElectronico">
+                      </div>                       
+                      <div class="carousel-item">
+                        <img src="/image/Constancias y Certificaciones/Microcontroladores_001.png" class="d-block w-100" alt="MicroControladores">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/image/Constancias y Certificaciones/Tester_001.png" class="d-block w-100" alt="Tester">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/image/Constancias y Certificaciones/diplomado_1.png" class="d-block w-100" alt="Diplomado 1">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="/image/Constancias y Certificaciones/diplomado_2.png" class="d-block w-100" alt="Diplomado 2">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            </div>
+
+            <div>
+                <p>Ahora solo falta terminar otros diferentes diplomados para hacer una especialidad en
+                    "Integrador de servicios IoT"</p>
+                <div>
+                    <img id="diplomado" src="./image/Constancias y Certificaciones/especialidad.png"
+                        class="rounded mx-auto d-block" alt="Especialidad">
+                </div>
+            </div>
+        </section>
+
+
+        <section>
+            <div>
+                <h2>Mis Pasa tiempos</h2>
+            </div>
+            <div>
+                <h3>Video Juegos</h3>
+            </div>
+            <div>
+                <h3>Ejercicio</h3>
+            </div>
+            <div>
+                <h3>Tocar Guitarra</h3>
+            </div>
+            <div>
+                <h3>Embusqueda de la Hamburguesa Perfecta</h3>
             </div>
         </section>
 
         <section></section>
-    </main >
+    </main>
     <aside></aside>
 
     <footer class="fote">
@@ -75,9 +241,8 @@
                 </div>
                 <div item="item_3">
                     <h4>Git Hub</h4>
-                    <a class="btn" href="https://github.com/DavidRCJ"><img
-                            src="./Image/social_redes/github.png" class="rounded mx-auto d-block"
-                            alt="Icon Git Hub"></a>
+                    <a class="btn" href="https://github.com/DavidRCJ"><img src="./Image/social_redes/github.png"
+                            class="rounded mx-auto d-block" alt="Icon Git Hub"></a>
                 </div>
                 <div item="item_4">
                     <h4>Linkedin</h4>
