--- a/aboutme.html
+++ b/aboutme.html
@@ -76,29 +76,81 @@
 
             <div>
                 <h3>Entrenamiento Full Stack Developer</h3>
-                <div>
-                    <P>En octubre de 2022, se lanzó el Programa "Transformación Digital para Jóvenes", por parte del
-                        Gobierno de Puebla y
-                        la Secretaria de Economía del Estado de Puebla y junto a EMTECH INSTITUTE, con una postulación
-                        al programa de más de 1000
-                        personas, gracias a que me esfuerzo, soy perseverante y apasionado por la tecnología, logre
-                        aprobar y destacar en las 3 faces
-                        del programa.
-                    </p>
-                    <p>
-                        Actualmente me encuentro en la última fase con otras 74 personas de esas 1000.
-                        Este curso me brindo conocimiento y habilidades en: </p>
-                    <div class="bullet">
-                        <p class="fw-bold">Front-end y Back-end</p>
-                        <p class="fw-bold">Control de Versiones de Software Git & Git-Hub</p>
-                        <p class="fw-bold">Metodlogia Agile Marco Scrum</p>
-                        <p class="fw-bold">Introducción a las Tecnologias Emergentes</p>
+            </div>
+
+            <div class="container_curso">
+                <div id="carouselExampleCaptions" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+
+                      </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./image/Programa/incio.png" class="d-block w-100" alt="Inicio de Programa">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/Programa/transformacion.png" class="d-block w-100" alt="Imagen transformacion digital">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/Programa/personas.png" class="d-block w-100" alt="Personas">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/Programa/calendario.png" class="d-block w-100" alt="Calendario">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/Programa/TEM.png" class="d-block w-100" alt="Tecnologias Emergentes">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/Programa/SCRUM.png" class="d-block w-100" alt="Marco SCRUM">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/Programa/PROGRA_WEB.png" class="d-block w-100" alt="Full Stack">
+                        </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div>
-                    <p>Obteniendo las siguientes constancias:</p>
+
+            </div>
+
+            <div>
+
+                <P>En octubre de 2022, se lanzó el Programa "Transformación Digital para Jóvenes", por parte del
+                    Gobierno de Puebla y
+                    la Secretaria de Economía del Estado de Puebla y junto a EMTECH INSTITUTE, con una postulación
+                    al programa de más de 1000
+                    personas, gracias a que me esfuerzo, soy perseverante y apasionado por la tecnología, logre
+                    aprobar y destacar en las 3 faces
+                    del programa.
+                </p>
+                <p>
+                    Actualmente me encuentro en la última fase con otras 74 personas de esas 1000.
+                    Este curso me brindo conocimiento y habilidades en: </p>
+                <div class="bullet">
+                    <p class="fw-bold">Front-end y Back-end</p>
+                    <p class="fw-bold">Control de Versiones de Software Git & Git-Hub</p>
+                    <p class="fw-bold">Metodlogia Agile Marco Scrum</p>
+                    <p class="fw-bold">Introducción a las Tecnologias Emergentes</p>
                 </div>
             </div>
+            <div>
+                <p>Obteniendo las siguientes constancias:</p>
+            </div>
+
 
             <div class="contener_carrusel">
                 <div id="carouselExampleIndicators" class="carousel slide">
@@ -139,11 +191,15 @@
                     </button>
                 </div>
             </div>
+
             <div>
                 <h2>Diplomados con Fundación Slim</h2>
-                <p>Porque me fascina el mundo de la tecnología, me sigo preparando y actualizando en el mundo de la industria 4.0
-                    y en la actualidad, estoy cursando un diplomado con "Fundación Slim, Capacítate para el empleo" en IOT 
-                    (Internet de las Cosas), que envuelve diferentes cursos, estas son algunas de las certificaciones que he
+                <p>Porque me fascina el mundo de la tecnología, me sigo preparando y actualizando en el mundo de la
+                    industria 4.0
+                    y en la actualidad, estoy cursando un diplomado con "Fundación Slim, Capacítate para el empleo" en
+                    IOT
+                    (Internet de las Cosas), que envuelve diferentes cursos, estas son algunas de las certificaciones
+                    que he
                     obtenido hasta el momento:
                 </p>
             </div>
@@ -151,37 +207,46 @@
             <div class="carusel2">
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="/image/Constancias y Certificaciones/Control de Versiones_001.png" class="d-block w-100" alt="CSV">
-                      </div> 
-                      <div class="carousel-item">
-                        <img src="/image/Constancias y Certificaciones/Fundamentos en Electronica Digital_001.png" class="d-block w-100" alt="F.E.D">
-                      </div>                       
-                      <div class="carousel-item">
-                        <img src="/image/Constancias y Certificaciones/Tecnico en Electronica_001.png" class="d-block w-100" alt="TecnicoElectronico">
-                      </div>                       
-                      <div class="carousel-item">
-                        <img src="/image/Constancias y Certificaciones/Microcontroladores_001.png" class="d-block w-100" alt="MicroControladores">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/image/Constancias y Certificaciones/Tester_001.png" class="d-block w-100" alt="Tester">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/image/Constancias y Certificaciones/diplomado_1.png" class="d-block w-100" alt="Diplomado 1">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="/image/Constancias y Certificaciones/diplomado_2.png" class="d-block w-100" alt="Diplomado 2">
-                      </div>
+                        <div class="carousel-item active">
+                            <img src="/image/Constancias y Certificaciones/Control de Versiones_001.png"
+                                class="d-block w-100" alt="CSV">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/image/Constancias y Certificaciones/Fundamentos en Electronica Digital_001.png"
+                                class="d-block w-100" alt="F.E.D">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/image/Constancias y Certificaciones/Tecnico en Electronica_001.png"
+                                class="d-block w-100" alt="TecnicoElectronico">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/image/Constancias y Certificaciones/Microcontroladores_001.png"
+                                class="d-block w-100" alt="MicroControladores">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/image/Constancias y Certificaciones/Tester_001.png" class="d-block w-100"
+                                alt="Tester">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/image/Constancias y Certificaciones/diplomado_1.png" class="d-block w-100"
+                                alt="Diplomado 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/image/Constancias y Certificaciones/diplomado_2.png" class="d-block w-100"
+                                alt="Diplomado 2">
+                        </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Previous</span>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
                     </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="visually-hidden">Next</span>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
                     </button>
-                  </div>
+                </div>
             </div>
 
             <div>
