--- a/proyectos.html
+++ b/proyectos.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    
     <link rel="stylesheet" href="./sass/base.css">
     <title>Proyectos</title>
 </head>
@@ -50,7 +49,7 @@
             </div>
             <div class="container">
                 <embed src="./Image/Scrum/CRUZJUAREZDAVIDRICARDO_GRUPO2_METODOLOGIASAGILES_PORTAFOLIO.pdf"
-                    type="application/pdf" width="100%" height="800px" />
+                    type="application/pdf" width="100%" height="850px"/>
             </div>
         </section>
 
@@ -69,53 +68,64 @@
         </section>
 
 
-        <div>
-            <section>
-                <div>
-                    <h2>Diseño y Simulacion de un robot omnidireccional en el entorno de Webots</h2>
+        <section>
+            <div>
+                <h2>Diseño y Simulacion de un robot omnidireccional en el entorno de Webots</h2>
+            </div>
+            ` <div>
+                <img id="img_one" src="./Image/Weboots/Diseño sin título (1).png" class="rounded mx-auto d-block"
+                    alt="Renderizado Robot Axterix">
+            </div>
+            <div>
+                <h3>Investigacion y desarrollado en PDF</h3>
+                <div class="container">
+                    <embed
+                        src="./Image/Weboots/Evaluaci_n_y_simulaci_n_de_un_robot_m_vil_omnidireccional_de_4_ruedas__Ast_rix_y_youBot_KUKA_.pdf"
+                        type="application/pdf" width="100%" height="800px" />
                 </div>
-                ` <div>
-                    <img id="img_one" src="./Image/Weboots/Diseño sin título (1).png" class="rounded mx-auto d-block"
-                        alt="Renderizado Robot Axterix">
-                </div>
-                <div>
-                    <h3>Investigacion y desarrollado en PDF</h3>
-                    <div class="container">
-                        <embed
-                            src="./Image/Weboots/Evaluaci_n_y_simulaci_n_de_un_robot_m_vil_omnidireccional_de_4_ruedas__Ast_rix_y_youBot_KUKA_.pdf"
-                            type="application/pdf" width="100%" height="800px" />
-                    </div>
-                </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
-
-        <section class="rasberry">
+        <section>
             <div>
                 <h2>Teclado con macros, desarrollado en Rasperry Pi Pico y Python</h2>
             </div>
-            <div class="grid_contener_rasberry">
-                <div item="item1"> </div>
-                <div item="item2">
-                    <img src="./Image/rasperry/Empaque.jpeg" class="rounded mx-auto d-block" alt="Empaque">
+            <div class="contener_carrusel">
+                <div id="carouselExampleIndicators" class="carousel slide">
+
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./image/rasperry/final3.jpeg"class="d-block w-100" alt="Empaque2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/rasperry/final2.jpeg"class="d-block w-100"alt="Empaque">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./image/rasperry/manual.png"class="d-block w-100" alt="Manual">
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-                <div item="item3">
-                    <img src="./Image/rasperry/final1.jpeg" class="rounded mx-auto d-block"
-                        alt="Empaque vista superior">
-                </div>
-                <div item="item4">
-                    <img src="./Image/rasperry/final2.jpeg" class="rounded mx-auto d-block" alt="Empaque vista 2">
-                </div>
-                <div item="item5"></div>
-                <div item="item6"></div>
-                <div item="item7">
-                    <img src="./Image/rasperry/final3.jpeg" class="rounded mx-auto d-block" alt="Empaque vista 3">
-                </div>
-                <div item="item8"></div>
-                <div item="item9">
-                    <img src="./Image/rasperry/manual.png" class="rounded mx-auto d-block" alt="Manual de Usuario">
-                </div>
-                <div item="item10"></div>
             </div>
             <div>
                 <h3>Investigacion y desarrollado en PDF</h3>
@@ -154,8 +164,6 @@
 
         </section>
 
-
-
         <section>
             <div>
                 <h2> Prototipo de un vehículo autónomo a escala, controlado Via Bluetooth</h2>
@@ -169,11 +177,11 @@
             <div>
                 <h3>Investigacion y desarrollado en PDF</h3>
                 <embed src="./Image/integrador/Proyecto Automóvil-Autónomo.pdf" type="application/pdf" width="33%"
-                    height="600px" />
+                    height="800px" />
                 <embed src="./Image/integrador/Manual de usuario.pdf" type="application/pdf" width="33%"
-                    height="600px" />
+                    height="800px" />
                 <embed src="./Image/integrador/Manual de mantenimiento.pdf" type="application/pdf" width="33%"
-                    height="600px" />
+                    height="800px" />
             </div>
         </section>
 
@@ -238,8 +246,6 @@
         </section>
     </footer>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./stylee/javascript/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
