agregar pestana hobies

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link disabled" href="./hobie.html">Pasatiempos</a>
                 </li>
             </ul>
         </nav>
