--- a/proyectos.html
+++ b/proyectos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">    
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./sass/base.css">
     <title>Proyectos</title>
 </head>
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="./aboutme.html">Sobre Mi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
+                    <a class="nav-link" href="./hobie.html">Pasatiempos</a>
                 </li>
             </ul>
         </nav>
@@ -49,7 +49,7 @@
             </div>
             <div class="container">
                 <embed src="./Image/Scrum/CRUZJUAREZDAVIDRICARDO_GRUPO2_METODOLOGIASAGILES_PORTAFOLIO.pdf"
-                    type="application/pdf" width="100%" height="850px"/>
+                    type="application/pdf" width="100%" height="850px" />
             </div>
         </section>
 
@@ -104,13 +104,13 @@
 
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./image/rasperry/final3.jpeg"class="d-block w-100" alt="Empaque2">
+                            <img src="./image/rasperry/final3.jpeg" class="d-block w-100" alt="Empaque2">
                         </div>
                         <div class="carousel-item">
-                            <img src="./image/rasperry/final2.jpeg"class="d-block w-100"alt="Empaque">
+                            <img src="./image/rasperry/final2.jpeg" class="d-block w-100" alt="Empaque">
                         </div>
                         <div class="carousel-item">
-                            <img src="./image/rasperry/manual.png"class="d-block w-100" alt="Manual">
+                            <img src="./image/rasperry/manual.png" class="d-block w-100" alt="Manual">
                         </div>
                     </div>
 
