Ultimos detalles en hobbies

--- a/hobie.html
+++ b/hobie.html
@@ -49,13 +49,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item">
-                    <img src="./image/games/assasing1.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/assasing1.jpg" class="d-block w-100" alt="Assasins Creed 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/assasing_ezio.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/assasing_ezio.jpg" class="d-block w-100" alt="Assasins Creed Ezio Coleccion">
                   </div>
                   <div class="carousel-item active">
-                    <img src="./image/games/collect.jpeg" class="d-block w-100" alt="...">
+                    <img src="./image/games/collect.jpeg" class="d-block w-100" alt="Assasins Creed Coleccion">
                   </div>
                 </div>
               </div>
@@ -68,13 +68,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./image/games/haloReach.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/haloReach.jpg" class="d-block w-100" alt="Halo Reach">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/halo-infity.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/halo-infity.jpg" class="d-block w-100" alt="Halo Infity">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/master_chief_colle.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/master_chief_colle.jpg" class="d-block w-100" alt="Master Chief Coleccion">
                   </div>
                 </div>
               </div>
@@ -86,13 +86,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./image/games/gear1.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/gear1.jpg" class="d-block w-100" alt="Gear of War 1">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/gear2.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/gear2.jpg" class="d-block w-100" alt="Gear of War 2">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/gear3.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/gear3.jpg" class="d-block w-100" alt="Gear of War 3">
                   </div>
                 </div>
               </div>
@@ -104,13 +104,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./image/games/lol_WR.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/lol_WR.jpg" class="d-block w-100" alt="League of Legends">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/lol_WR1.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/lol_WR1.jpg" class="d-block w-100" alt="League of Legends Wild Rift">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/lol_t.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/lol_t.jpg" class="d-block w-100" alt="League of Legends Temporada 2023">
                   </div>
                 </div>
               </div>
@@ -122,13 +122,13 @@
               <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./image/games/cod_ww.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/cod_ww.jpg" class="d-block w-100" alt="Call Of Duty World at War">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/cod_w4.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/cod_w4.jpg" class="d-block w-100" alt="Call Of Duty Modern War 4">
                   </div>
                   <div class="carousel-item">
-                    <img src="./image/games/cod_ww.jpg" class="d-block w-100" alt="...">
+                    <img src="./image/games/cod_ww.jpg" class="d-block w-100" alt="Call Of Duty Modern War 2">
                   </div>
                 </div>
               </div>
@@ -186,6 +186,56 @@
       </div>
     </section>
 
+    <section class="Hamburguesa">
+      <div>
+        <h2>En busqueda de la Hamburguesa Perfecta</h2>        
+      </div>
+      <div>
+        <p>Me encata salir por la tarde un fin de semana o despeus de un largo dia de trabajo
+          ir a un restaurante y pedir la hamburguesa de la casa o pedir la mas grande, porque me gsuta 
+          catar hamburguesas, Soy Catador de Hamburguesa XD, una cerveza bien fria para acompanar, estas
+          fotos son de las hamburguesas que he considerado que son muy ricas a diferencia de otras, debajo 
+          de cada imagen aparece en que posicion la coloco de mi top 5.
+        </p>
+      </div>
+      <div class="carrusel_hambur">
+        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./image/hambur/beef_s.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/hambur/beef_s2.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/hambur/fundicion.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/hambur/macartis.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/hambur/peps.jpg" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/hambur/popeye.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="./image/hambur/terrazo2.jpg" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+      </div>
+
+    </section>
   </main>
 
   <footer class="fote">
