Update ref docs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <h1 class="titulo1">David Ricardo Cruz Juárez <span>&#160;</span></h1>
                 </div>
                 <div>
-                    <img src="./Image/perfil/face2.jpg" id="logo_dave" alt="fotoperfil">
+                    <img src="./image/perfil/face2.jpg" id="logo_dave" alt="fotoperfil">
                 </div>
                 <div>
                     <h3>Ingeniero mecatrónico, con interés en Desarrollo de Software, Sistemas Embebidos,
@@ -63,31 +63,31 @@
             <section class="grid_contener">
                 <div item="item1">
                     <h3>C</h3>
-                    <img src="./Image/icons/c.png" class="rounded mx-auto d-block" alt="Icono C">
+                    <img src="./image/icons/c.png" class="rounded mx-auto d-block" alt="Icono C">
                 </div>
                 <div item="item 2">
                     <h3>Java</h3>
-                    <img src="./Image/icons/java.png" class="rounded mx-auto d-block" alt="Icono JAVA">>
+                    <img src="./image/icons/java.png" class="rounded mx-auto d-block" alt="Icono JAVA">>
                 </div>
                 <div item="item 3">
                     <h3>JavaScript</h3>
-                    <img src="./Image/icons/JS.png" class="rounded mx-auto d-block" alt="Icono JavaScript">
+                    <img src="./image/icons/JS.png" class="rounded mx-auto d-block" alt="Icono JavaScript">
                 </div>
                 <div item="item 4">
                     <h3>HTML</h3>
-                    <img src="./Image/icons/html-5.png" class="rounded mx-auto d-block" alt="Icono HTML">
+                    <img src="./image/icons/html-5.png" class="rounded mx-auto d-block" alt="Icono HTML">
                 </div>
                 <div item="item 5">
                     <h3>CSS</h3>
-                    <img src="./Image/icons/css.png" class="rounded mx-auto d-block" alt="Icono CSS ">
+                    <img src="./image/icons/css.png" class="rounded mx-auto d-block" alt="Icono CSS ">
                 </div>
                 <div item="item 6">
                     <h3>Python</h3>
-                    <img src="./Image/icons/python_im.png" class="rounded mx-auto d-block" alt="Icono PYTHON">
+                    <img src="./image/icons/python_im.png" class="rounded mx-auto d-block" alt="Icono PYTHON">
                 </div>
                 <div item="item 7">
                     <h3>SQL</h3>
-                    <img src="./Image/icons/sql.png" class="rounded mx-auto d-block" alt="Icono SQL">
+                    <img src="./image/icons/sql.png" class="rounded mx-auto d-block" alt="Icono SQL">
                 </div>
             </section>
         </section>
@@ -99,28 +99,28 @@
             <section class="grid_contener_2">
                 <div item="item1">
                     <h3>Visual S Code</h3>
-                    <img src="./Image/icons/SDVE/visual.png" class="rounded mx-auto d-block" alt="Icono Visual Code">
+                    <img src="./image/icons/SDVE/visual.png" class="rounded mx-auto d-block" alt="Icono Visual Code">
                 </div>
                 <div item="item2">
                     <h3>Sublime Text</h3>
-                    <img src="./Image/icons/SDVE/sublime.png" class="rounded mx-auto d-block" alt="Icono Sublime Text">
+                    <img src="./image/icons/SDVE/sublime.png" class="rounded mx-auto d-block" alt="Icono Sublime Text">
                 </div>
                 <div item="item3">
                     <h3>Netbeans</h3>
-                    <img src="./Image/icons/SDVE/netbeans.jpeg" id="img_w" class="rounded mx-auto d-block"
+                    <img src="./image/icons/SDVE/netbeans.jpeg" id="img_w" class="rounded mx-auto d-block"
                         alt="Icono NetBeans">
                 </div>
                 <div item="item4">
                     <h3>Angular</h3>
-                    <img src="./Image/icons/SDVE/angular.png" class="rounded mx-auto d-block" alt="Icono Angular">
+                    <img src="./image/icons/SDVE/angular.png" class="rounded mx-auto d-block" alt="Icono Angular">
                 </div>
                 <div item="item5">
                     <h3>Node JS</h3>
-                    <img src="./Image/icons/SDVE/node js.png" class="rounded mx-auto d-block" alt="Icono Angular">
+                    <img src="./image/icons/SDVE/node js.png" class="rounded mx-auto d-block" alt="Icono Angular">
                 </div>
                 <div item="item6">
                     <h3>D Jango</h3>
-                    <img src="./Image/icons/SDVE/django.png" class="rounded mx-auto d-block" alt="Icono DJango">
+                    <img src="./image/icons/SDVE/django.png" class="rounded mx-auto d-block" alt="Icono DJango">
                 </div>
             </section>
         </section>
@@ -133,28 +133,28 @@
             <section class="grid_contener_3">
                 <div item="item1">
                     <h3>Code Composer Studio</h3>
-                    <img src="./Image/icons/Embb/codecomp.jpg" id="img_w" class="rounded mx-auto d-block"
+                    <img src="./image/icons/Embb/codecomp.jpg" id="img_w" class="rounded mx-auto d-block"
                         alt="Code Composer">
                 </div>
                 <div item="item2">
                     <h3>Thonny</h3>
-                    <img src="./Image/icons/Embb/tony.png" class="rounded mx-auto d-block" alt="Icono Tony">
+                    <img src="./image/icons/Embb/tony.png" class="rounded mx-auto d-block" alt="Icono Tony">
                 </div>
                 <div item="item3">
                     <h3>Micro Python</h3>
-                    <img src="./Image/icons/Embb/mypht.jpg" class="rounded mx-auto d-block" alt="Icono MyCro Python">
+                    <img src="./image/icons/Embb/mypht.jpg" class="rounded mx-auto d-block" alt="Icono MyCro Python">
                 </div>
                 <div item="item4">
                     <h3>Vivado</h3>
-                    <img src="./Image/icons/Embb/vivado.jpg" class="rounded mx-auto d-block" alt="Icono Vivado">
+                    <img src="./image/icons/Embb/vivado.jpg" class="rounded mx-auto d-block" alt="Icono Vivado">
                 </div>
                 <div item="item5">
                     <h3>Xilinx AMD</h3>
-                    <img src="./Image/icons/Embb/amdx.png" class="rounded mx-auto d-block" alt="Xilinx AMD">
+                    <img src="./image/icons/Embb/amdx.png" class="rounded mx-auto d-block" alt="Xilinx AMD">
                 </div>
                 <div item-="Arduino">
                     <h3>Arduino</h3>
-                    <img src="./Image/icons/Embb/arduino.png" class="rounded mx-auto d-block" alt="Icono Arduino">
+                    <img src="./image/icons/Embb/arduino.png" class="rounded mx-auto d-block" alt="Icono Arduino">
                 </div>
             </section>
         </section>
@@ -166,27 +166,27 @@
             <section class="grid_contener_4">
                 <div item="item1">
                     <h3>SolidWorks</h3>
-                    <img src="./Image/icons/cad/solid.jpg" class="rounded mx-auto d-block" alt="Solid Works">
+                    <img src="./image/icons/cad/solid.jpg" class="rounded mx-auto d-block" alt="Solid Works">
                 </div>
                 <div item="item2">
                     <h3>Catia</h3>
-                    <img src="./Image/icons/cad/catia.jpg" class="rounded mx-auto d-block" alt="Catia">
+                    <img src="./image/icons/cad/catia.jpg" class="rounded mx-auto d-block" alt="Catia">
                 </div>
                 <div item="item3">
                     <h3>Auto CAD</h3>
-                    <img src="./Image/icons/cad/autocad.png" class="rounded mx-auto d-block" alt="Autocad">
+                    <img src="./image/icons/cad/autocad.png" class="rounded mx-auto d-block" alt="Autocad">
                 </div>
                 <div item="item4">
                     <h3>Visi Cad</h3>
-                    <img src="./Image/icons/cad/visi cad.png" class="rounded mx-auto d-block" alt="Visicad">
+                    <img src="./image/icons/cad/visi cad.png" class="rounded mx-auto d-block" alt="Visicad">
                 </div>
                 <div item="item5">
                     <h3>ArchiCAD</h3>
-                    <img src="./Image/icons/cad/archicad.png" class="rounded mx-auto d-block" alt="Archicad">
+                    <img src="./image/icons/cad/archicad.png" class="rounded mx-auto d-block" alt="Archicad">
                 </div>
                 <div item="item6">
                     <h3>Blender</h3>
-                    <img src="./Image/icons/cad/blender.png" class="rounded mx-auto d-block" alt="iCONO Blender">
+                    <img src="./image/icons/cad/blender.png" class="rounded mx-auto d-block" alt="iCONO Blender">
                 </div>
             </section>
         </section>
@@ -198,26 +198,26 @@
             <section class="grid_contener_5">
                 <div item="item1">
                     <h3>Webots</h3>
-                    <img src="./Image/icons/ROBOTIC/webots.png" class="rounded mx-auto d-block" alt="Logo Webots">
+                    <img src="./image/icons/ROBOTIC/webots.png" class="rounded mx-auto d-block" alt="Logo Webots">
                 </div>
                 <div item="item2">
                     <h3>CoppeliaSim</h3>
-                    <img src="./Image/icons/ROBOTIC/copelia.jpg" class="rounded mx-auto d-block" id="img_w"
+                    <img src="./image/icons/ROBOTIC/copelia.jpg" class="rounded mx-auto d-block" id="img_w"
                         alt="Logo Coopelia">
                 </div>
                 <div item="item3">
                     <h3>MatLab Simulink</h3>
-                    <img src="./Image/icons/ROBOTIC/matlab.png" class="rounded mx-auto d-block" id="img_w"
+                    <img src="./image/icons/ROBOTIC/matlab.png" class="rounded mx-auto d-block" id="img_w"
                         alt="Logo Matlab Simulink">
                 </div>
                 <div item="item4">
                     <h3>RoboDK</h3>
-                    <img src="./Image/icons/ROBOTIC/robodk.jpg" class="rounded mx-auto d-block"
+                    <img src="./image/icons/ROBOTIC/robodk.jpg" class="rounded mx-auto d-block"
                         alt="Logo Matlab Simulink">
                 </div>
                 <div item="item5">
                     <h3>Proteus Design Suite</h3>
-                    <img src="./Image/icons/ROBOTIC/prote.jfif" class="rounded mx-auto d-block" alt="Logo Proteus">
+                    <img src="./image/icons/ROBOTIC/prote.jfif" class="rounded mx-auto d-block" alt="Logo Proteus">
                 </div>
             </section>
         </section>
@@ -228,51 +228,52 @@
 
     <footer class="fote">
         <section>
-            <div>
-                <h3 class="text-center">Contactame</h3>
+          <div>
+            <h3 class="text-center">Contactame</h3>
+          </div>
+          <section class="grid_contener_social">
+            <div item="6"></div>
+            <div item="7"></div>
+            <div item="item_1">
+              <h4>Whats App</h4>
+              <a class="btn"
+                href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
+                alt="Icon Whats App"><img src="./image/social_redes/whats.png" class="rounded mx-auto d-block"
+                  alt="Whats App ICon"></a>
             </div>
-            <section class="grid_contener_social">
-                <div item="6"></div>
-                <div item="7"></div>
-                <div item="item_1">
-                    <h4>Whats App</h4>
-                    <a class="btn"
-                        href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
-                        alt="Icon Whats App"><img src="./Image/social_redes/whats.png" class="rounded mx-auto d-block"
-                            alt="Whats App ICon"></a>
-                </div>
-                <div item="item_2">
-                    <h4>G-Mail</h4>
-                    <a class="btn"
-                        href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
-                        role="button"><img src="./Image/social_redes/gmail.png" class="rounded mx-auto d-block"
-                            alt="Icon G-Mail"></a>
-                </div>
-                <div item="item_3">
-                    <h4>Git Hub</h4>
-                    <a class="btn" href="https://github.com/DavidRCJ"><img src="./Image/social_redes/github.png"
-                            class="rounded mx-auto d-block" alt="Icon Git Hub"></a>
-                </div>
-                <div item="item_4">
-                    <h4>Linkedin</h4>
-                    <a class="btn" href="https://www.linkedin.com/in/david-ricardo-cruz-ju%C3%A1rez-6b441523a"><img
-                            src="./Image/social_redes/link.png" class="rounded mx-auto d-block" alt="Icon Linkedin"></a>
-                </div>
-                <div imte="item_5">
-                    <h4>Facebook</h4>
-                    <a class="btn" href="https://www.facebook.com/lmlDRCJlml?mibextid=ZbWKwL"><img
-                            src="./Image/social_redes/face.png" class="rounded mx-auto d-block" alt="Icon Facebook"></a>
-                </div>
-                <div item="8"></div>
-                <div item="9"></div>
-            </section>
+            <div item="item_2">
+              <h4>G-Mail</h4>
+              <a class="btn"
+                href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
+                role="button"><img src="./image/social_redes/gmail.png" class="rounded mx-auto d-block"
+                  alt="Icon G-Mail"></a>
+            </div>
+            <div item="item_3">
+              <h4>Git Hub</h4>
+              <a class="btn" href="https://github.com/DavidRCJ"><img src="./image/social_redes/github.png"
+                  class="rounded mx-auto d-block" alt="Icon Git Hub"></a>
+            </div>
+            <div item="item_4">
+              <h4>Linkedin</h4>
+              <a class="btn" href="https://www.linkedin.com/in/david-ricardo-cruz-ju%C3%A1rez-6b441523a"><img
+                  src="./image/social_redes/link.png" class="rounded mx-auto d-block" alt="Icon Linkedin"></a>
+            </div>
+            <div imte="item_5">
+              <h4>Facebook</h4>
+              <a class="btn" href="https://www.facebook.com/lmlDRCJlml?mibextid=ZbWKwL"><img
+                  src="./image/social_redes/face.png" class="rounded mx-auto d-block" alt="Icon Facebook"></a>
+            </div>
+            <div item="8"></div>
+            <div item="9"></div>
+          </section>
         </section>
-    </footer>
+      </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-        <video src="./Video/tinta.mp4" loop muted autoplay></video>
+        <video src="./video/tinta.mp4" loop muted autoplay></video>
+        
 </body>
 
 </html>
