--- a/aboutme.html
+++ b/aboutme.html
@@ -353,50 +353,50 @@
 
     <footer class="fote">
         <section>
-            <div>
-                <h3 class="text-center">Contactame</h3>
+          <div>
+            <h3 class="text-center">Contactame</h3>
+          </div>
+          <section class="grid_contener_social">
+            <div item="6"></div>
+            <div item="7"></div>
+            <div item="item_1">
+              <h4>Whats App</h4>
+              <a class="btn"
+                href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
+                alt="Icon Whats App"><img src="./image/social_redes/whats.png" class="rounded mx-auto d-block"
+                  alt="Whats App ICon"></a>
             </div>
-            <section class="grid_contener_social">
-                <div item="6"></div>
-                <div item="7"></div>
-                <div item="item_1">
-                    <h4>Whats App</h4>
-                    <a class="btn"
-                        href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
-                        alt="Icon Whats App"><img src="./Image/social_redes/whats.png" class="rounded mx-auto d-block"
-                            alt="Whats App ICon"></a>
-                </div>
-                <div item="item_2">
-                    <h4>G-Mail</h4>
-                    <a class="btn"
-                        href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
-                        role="button"><img src="./Image/social_redes/gmail.png" class="rounded mx-auto d-block"
-                            alt="Icon G-Mail"></a>
-                </div>
-                <div item="item_3">
-                    <h4>Git Hub</h4>
-                    <a class="btn" href="https://github.com/DavidRCJ"><img src="./Image/social_redes/github.png"
-                            class="rounded mx-auto d-block" alt="Icon Git Hub"></a>
-                </div>
-                <div item="item_4">
-                    <h4>Linkedin</h4>
-                    <a class="btn" href="https://www.linkedin.com/in/david-ricardo-cruz-ju%C3%A1rez-6b441523a"><img
-                            src="./Image/social_redes/link.png" class="rounded mx-auto d-block" alt="Icon Linkedin"></a>
-                </div>
-                <div imte="item_5">
-                    <h4>Facebook</h4>
-                    <a class="btn" href="https://www.facebook.com/lmlDRCJlml?mibextid=ZbWKwL"><img
-                            src="./Image/social_redes/face.png" class="rounded mx-auto d-block" alt="Icon Facebook"></a>
-                </div>
-                <div item="8"></div>
-                <div item="9"></div>
-            </section>
+            <div item="item_2">
+              <h4>G-Mail</h4>
+              <a class="btn"
+                href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
+                role="button"><img src="./image/social_redes/gmail.png" class="rounded mx-auto d-block"
+                  alt="Icon G-Mail"></a>
+            </div>
+            <div item="item_3">
+              <h4>Git Hub</h4>
+              <a class="btn" href="https://github.com/DavidRCJ"><img src="./image/social_redes/github.png"
+                  class="rounded mx-auto d-block" alt="Icon Git Hub"></a>
+            </div>
+            <div item="item_4">
+              <h4>Linkedin</h4>
+              <a class="btn" href="https://www.linkedin.com/in/david-ricardo-cruz-ju%C3%A1rez-6b441523a"><img
+                  src="./image/social_redes/link.png" class="rounded mx-auto d-block" alt="Icon Linkedin"></a>
+            </div>
+            <div imte="item_5">
+              <h4>Facebook</h4>
+              <a class="btn" href="https://www.facebook.com/lmlDRCJlml?mibextid=ZbWKwL"><img
+                  src="./image/social_redes/face.png" class="rounded mx-auto d-block" alt="Icon Facebook"></a>
+            </div>
+            <div item="8"></div>
+            <div item="9"></div>
+          </section>
         </section>
-    </footer>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-        <video src="./Video/tinta.mp4" loop muted autoplay></video>
+        <video src="./video/tinta.mp4" loop muted autoplay></video>
 
 </body>
 
