--- a/proyectos.html
+++ b/proyectos.html
@@ -46,7 +46,7 @@
                 <h2>Desarrollo de App Cuida+, Mediante metodologia Agile en el Marco Scrum</h2>
             </div>
             <div class="container">
-                <embed src="./Image/Scrum/CRUZJUAREZDAVIDRICARDO_GRUPO2_METODOLOGIASAGILES_PORTAFOLIO.pdf"
+                <embed src="./image/Scrum/CRUZJUAREZDAVIDRICARDO_GRUPO2_METODOLOGIASAGILES_PORTAFOLIO.pdf"
                     type="application/pdf" width="100%" height="850px" />
             </div>
         </section>
@@ -58,7 +58,7 @@
             </div>
             <div>
                 <a class="btn_center" href="https://davidrcj.github.io/ecommerce-SASS/" alt="Link Ecomerce"><img
-                        src="./Image/Ecoomerce/eco_cat.png" id="eco_sass" class="rounded mx-auto d-block"
+                        src="./image/Ecoomerce/eco_cat.png" id="eco_sass" class="rounded mx-auto d-block"
                         alt="Link Eccomerce"></a>
                 <h3>Presiona la imagen para ir al enlace del eccomerce</h3>
             </div>
@@ -71,14 +71,14 @@
                 <h2>Diseño y Simulacion de un robot omnidireccional en el entorno de Webots</h2>
             </div>
             ` <div>
-                <img id="img_one" src="./Image/Weboots/Diseño sin título (1).png" class="rounded mx-auto d-block"
+                <img id="img_one" src="./image/Weboots/Diseño sin título (1).png" class="rounded mx-auto d-block"
                     alt="Renderizado Robot Axterix">
             </div>
             <div>
                 <h3>Investigacion y desarrollado en PDF</h3>
                 <div class="container">
                     <embed
-                        src="./Image/Weboots/Evaluaci_n_y_simulaci_n_de_un_robot_m_vil_omnidireccional_de_4_ruedas__Ast_rix_y_youBot_KUKA_.pdf"
+                        src="./image/Weboots/Evaluaci_n_y_simulaci_n_de_un_robot_m_vil_omnidireccional_de_4_ruedas__Ast_rix_y_youBot_KUKA_.pdf"
                         type="application/pdf" width="100%" height="800px" />
                 </div>
             </div>
@@ -129,7 +129,7 @@
                 <h3>Investigacion y desarrollado en PDF</h3>
             </div>
             <div class="container">
-                <embed src="./Image/rasperry/Teclado_para_clases_en_linea.pdf" type="application/pdf" width="100%"
+                <embed src="./image/rasperry/Teclado_para_clases_en_linea.pdf" type="application/pdf" width="100%"
                     height="800px" />
             </div>
             </div>
@@ -146,7 +146,7 @@
                 <div>
                     <h3>Textrix en FPGA y modulo PS2</h3>
                     <a class="btn_center" href="https://youtu.be/JU6Ka7WDbFA" alt="Link Video FPGA">
-                        < <img src="./Image/fpga/ps2_blue.png" id="eco_sass_2" class="rounded mx-auto d-block"
+                        < <img src="./image/fpga/ps2_blue.png" id="eco_sass_2" class="rounded mx-auto d-block"
                             alt="Textix Completo">
                     </a>
                     <h3>Presiona la imagen para ir al enlace del video en Youtube</h3>
@@ -157,7 +157,7 @@
                 <h3>Pdf con la investigacion</h3>
             </div>
             <div class="container">
-                <embed src="./Image/fpga//VGA_REPORT_EXPO.pdf" type="application/pdf" width="100%" height="800px" />
+                <embed src="./image/fpga//VGA_REPORT_EXPO.pdf" type="application/pdf" width="100%" height="800px" />
             </div>
 
         </section>
@@ -168,17 +168,17 @@
             </div>
             <div>
                 <a class="btn_center" href="https://youtu.be/En38XkcaLVs" alt="Link a Youtube"><img
-                        src="./Image/integrador/robot movil.png" id="eco_sass_2" class="rounded mx-auto d-block"
+                        src="./image/integrador/robot movil.png" id="eco_sass_2" class="rounded mx-auto d-block"
                         alt="Robot Movil"></a>
                 <h3>Presiona la iamgen para ir al enlance de You Tube</h3>
             </div>
             <div>
                 <h3>Investigacion y desarrollado en PDF</h3>
-                <embed src="./Image/integrador/Proyecto Automóvil-Autónomo.pdf" type="application/pdf" width="33%"
+                <embed src="./image/integrador/Proyecto Automóvil-Autónomo.pdf" type="application/pdf" width="33%"
                     height="800px" />
-                <embed src="./Image/integrador/Manual de usuario.pdf" type="application/pdf" width="33%"
+                <embed src="./image/integrador/Manual de usuario.pdf" type="application/pdf" width="33%"
                     height="800px" />
-                <embed src="./Image/integrador/Manual de mantenimiento.pdf" type="application/pdf" width="33%"
+                <embed src="./image/integrador/Manual de mantenimiento.pdf" type="application/pdf" width="33%"
                     height="800px" />
             </div>
         </section>
@@ -202,52 +202,52 @@
 
     <footer class="fote">
         <section>
-            <div>
-                <h3 class="text-center">Contactame</h3>
+          <div>
+            <h3 class="text-center">Contactame</h3>
+          </div>
+          <section class="grid_contener_social">
+            <div item="6"></div>
+            <div item="7"></div>
+            <div item="item_1">
+              <h4>Whats App</h4>
+              <a class="btn"
+                href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
+                alt="Icon Whats App"><img src="./image/social_redes/whats.png" class="rounded mx-auto d-block"
+                  alt="Whats App ICon"></a>
             </div>
-            <section class="grid_contener_social">
-                <div item="6"></div>
-                <div item="7"></div>
-                <div item="item_1">
-                    <h4>Whats App</h4>
-                    <a class="btn"
-                        href="https://api.whatsapp.com/send?phone=2383048902&text=Hola%20vi%20tu%20perfil,%20en%20tu%20pagina%20y%20me%20parece%20interesante,%20me%20gustaria%20comentar%20sobre"
-                        alt="Icon Whats App"><img src="./Image/social_redes/whats.png" class="rounded mx-auto d-block"
-                            alt="Whats App ICon"></a>
-                </div>
-                <div item="item_2">
-                    <h4>G-Mail</h4>
-                    <a class="btn"
-                        href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
-                        role="button"><img src="./Image/social_redes/gmail.png" class="rounded mx-auto d-block"
-                            alt="Icon G-Mail"></a>
-                </div>
-                <div item="item_3">
-                    <h4>Git Hub</h4>
-                    <a class="btn" href="https://github.com/DavidRCJ?tab=repositories"><img
-                            src="./Image/social_redes/github.png" class="rounded mx-auto d-block"
-                            alt="Icon Git Hub"></a>
-                </div>
-                <div item="item_4">
-                    <h4>Linkedin</h4>
-                    <a class="btn" href="https://www.linkedin.com/in/david-ricardo-cruz-ju%C3%A1rez-6b441523a"><img
-                            src="./Image/social_redes/link.png" class="rounded mx-auto d-block" alt="Icon Linkedin"></a>
-                </div>
-                <div imte="item_5">
-                    <h4>Facebook</h4>
-                    <a class="btn" href="https://www.facebook.com/lmlDRCJlml?mibextid=ZbWKwL"><img
-                            src="./Image/social_redes/face.png" class="rounded mx-auto d-block" alt="Icon Facebook"></a>
-                </div>
-                <div item="8"></div>
-                <div item="9"></div>
-            </section>
+            <div item="item_2">
+              <h4>G-Mail</h4>
+              <a class="btn"
+                href="mailto:davidrcruzjuarez@gmail.com?subject=Interes%20en%20tu%20perfil&body=Hola%20soy%3A%0D%0AMe%20interesa%20tu%20perfil%2C%20tu%20portafolio%20es%20bueno."
+                role="button"><img src="./image/social_redes/gmail.png" class="rounded mx-auto d-block"
+                  alt="Icon G-Mail"></a>
+            </div>
+            <div item="item_3">
+              <h4>Git Hub</h4>
+              <a class="btn" href="https://github.com/DavidRCJ"><img src="./image/social_redes/github.png"
+                  class="rounded mx-auto d-block" alt="Icon Git Hub"></a>
+            </div>
+            <div item="item_4">
+              <h4>Linkedin</h4>
+              <a class="btn" href="https://www.linkedin.com/in/david-ricardo-cruz-ju%C3%A1rez-6b441523a"><img
+                  src="./image/social_redes/link.png" class="rounded mx-auto d-block" alt="Icon Linkedin"></a>
+            </div>
+            <div imte="item_5">
+              <h4>Facebook</h4>
+              <a class="btn" href="https://www.facebook.com/lmlDRCJlml?mibextid=ZbWKwL"><img
+                  src="./image/social_redes/face.png" class="rounded mx-auto d-block" alt="Icon Facebook"></a>
+            </div>
+            <div item="8"></div>
+            <div item="9"></div>
+          </section>
         </section>
-    </footer>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-        <video src="./Video/tinta.mp4" loop muted autoplay></video>
+    <video src="./video/tinta.mp4" loop muted autoplay></video>
+        
 </body>
 
 </html>
